Fixbug: from PR comments.