@@ -10,6 +10,7 @@ import static no.unit.nva.testutils.RandomDataGenerator.randomUri;
 import static org.hamcrest.MatcherAssert.assertThat;
 import java.net.URI;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
@@ -19,7 +20,7 @@ import no.unit.nva.customer.model.ApplicationDomain;
 import no.unit.nva.customer.model.CustomerDao;
 import no.unit.nva.customer.model.CustomerDto;
 import no.unit.nva.customer.model.LinkedDataContextUtils;
-import no.unit.nva.customer.model.PublicationTypes;
+import no.unit.nva.customer.model.PublicationInstanceTypes;
 import no.unit.nva.customer.model.PublicationWorkflow;
 import no.unit.nva.customer.model.CustomerDao.RightsRetentionStrategyDao;
 import no.unit.nva.customer.model.RightsRetentionStrategyType;
@@ -63,7 +64,7 @@ public class CustomerDataGenerator {
                                    .withNviInstitution(randomBoolean())
                                    .withRboInstitution(randomBoolean())
                                    .withRightsRetentionStrategy(randomRightsRetentionStrategy())
-                                   .withPublicationTypes(randomPublicationTypes())
+                                   .withAllowFileUploadFor(randomAllowFileUploadFor())
                                    .build();
 
         assertThat(customer, doesNotHaveEmptyValuesIgnoringFields(Set.of("doiAgent.password")));
@@ -99,7 +100,7 @@ public class CustomerDataGenerator {
                                    .withNviInstitution(randomBoolean())
                                    .withSector(randomSector())
                                    .withRightsRetentionStrategy(randomRightsRetentionStrategy())
-                                   .withPublicationTypes(randomPublicationTypes())
+                                   .withAllowFileUploadFor(randomAllowFileUploadFor())
                                    .build();
         assertThat(customer, doesNotHaveEmptyValues());
         return customer;
@@ -174,12 +175,12 @@ public class CustomerDataGenerator {
         return randomElement(Sector.values());
     }
 
-    public static PublicationTypes randomPublicationTypesDto() {
-        return randomElement(PublicationTypes.values());
+    public static PublicationInstanceTypes randomAllowFileUploadForDto() {
+        return randomElement(PublicationInstanceTypes.values());
     }
 
-    public static List<PublicationTypes> randomPublicationTypes() {
-        return List.of(randomPublicationTypesDto(), randomPublicationTypesDto(), randomPublicationTypesDto());
+    public static Set<PublicationInstanceTypes> randomAllowFileUploadFor() {
+        return new HashSet<>(Arrays.asList(randomAllowFileUploadForDto(), randomAllowFileUploadForDto(), randomAllowFileUploadForDto()));
     }
 }
 
